plugins {
    id "com.github.johnrengelman.shadow" version "8.1.0"
    id "java"
    id "io.freefair.lombok" version "6.6.3"
    id "eclipse"
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.apache.commons:commons-text:1.10.0'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'it.unimi.dsi:fastutil-core:8.5.12'
    implementation 'commons-codec:commons-codec:1.15'
    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
    implementation 'com.github.FireMasterK.NewPipeExtractor:NewPipeExtractor:b0276319f5219832d6d534dfb4ced6e303484f54'
    implementation 'com.github.FireMasterK:nanojson:01934924442edda6952f3bedf80ba9e969cba8bc'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
    implementation 'com.rometools:rome:2.1.0'
    implementation 'org.jsoup:jsoup:1.15.4'
    implementation 'io.activej:activej-common:5.4.3'
    implementation 'io.activej:activej-http:5.4.3'
    implementation 'io.activej:activej-boot:5.4.3'
    implementation 'io.activej:activej-specializer:5.4.3'
    implementation 'io.activej:activej-launchers-http:5.4.3'
    implementation 'org.hsqldb:hsqldb:2.7.1'
    implementation 'org.postgresql:postgresql:42.6.0'
    implementation 'org.hibernate:hibernate-core:6.1.7.Final'
    implementation 'org.hibernate:hibernate-hikaricp:6.1.7.Final'
    implementation 'com.zaxxer:HikariCP:5.0.1'
    implementation 'org.springframework.security:spring-security-crypto:6.0.2'
    implementation 'commons-logging:commons-logging:1.2'
    implementation(platform("com.squareup.okhttp3:okhttp-bom:4.10.0"))
    implementation 'com.squareup.okhttp3:okhttp'
    implementation 'com.squareup.okhttp3:okhttp-brotli'
    implementation 'io.sentry:sentry:6.16.0'
    implementation 'rocks.kavin:reqwest4j:1.0.2'
    implementation 'io.minio:minio:8.5.2'
}

shadowJar {
    // minimize()
}

jar {
    manifest {
        attributes(
                'Main-Class': 'me.kavin.piped.Main'
        )
    }
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

group = 'me.kavin.piped'
version = '1.0'
sourceCompatibility = JavaVersion.VERSION_19
targetCompatibility = JavaVersion.VERSION_19
